# eng_soft

./: .gitignore  CLAUDE.md  README.md  formulario.bancasajustado.doc
backend/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  send_banca.py
backend/app/: config.py  deps.py  logger.py  models.py  result.py  router.py
backend/app/api/: admin_router.py  auth_deps.py  router.py
backend/app/application/: admin_banca_service.py  attachment_service.py  auth_service.py  banca_service.py  banca_validation.py  document_service.py  email_service.py  invite_service.py  petition_service.py
backend/app/config/: __init__.py  ppg_profiles.py
backend/app/domain/: banca_repository.py  errors.py  models.py  user_repository.py
backend/app/infrastructure/: database.py  mongo_banca_repository.py  mongo_user_repository.py  security.py
backend/app/services/: document_service.py  email_service.py  petition_service.py
backend/criaBancas/: .gitignore  LICENSE  criaBancas.py
backend/criaBancas/Fonts/Arial-Black/: ARIBLK.pkl
backend/criaBancas/Fonts/Federo/: Federo-Regular.cw127.pkl  Federo-Regular.pkl
backend/criaBancasEnfis/: .gitignore  criaBancasEnfis.py  gerar_exemplo.py
documentation/: ata-reuniao-20-04.md  ata-reuniao-26-04.md  ata-reuniao-30-04.md  business-description.md  email-gmail-setup.md  guia-do-usuario.md  homework-definition-step2.md  step2-plan.md  summary.md  technical-decisions.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.css  (+10 more)
infrastructure/: docker-compose.yml
(+42 files in other folders)
