[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fpdf2>=2.8.7",
    "qrcode>=8.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "FAST", # fastapi
    "I",    # isort
]

[tool.ruff.lint.per-file-ignores]
"criaBancas/criaBancas.py" = ["E501"]  # long institutional PDF text strings
"send_banca.py" = ["E501"]             # legacy script
